<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help" />
    <item
        android:id="@+id/nav_task_detail"
        android:icon="@drawable/ic_task_detail"
        android:title="@string/task_detail" />
    <item
        android:id="@+id/nav_add_task"
        android:icon="@drawable/ic_add_task"
        android:title="@string/add_task" />
    <item
        android:id="@+id/nav_edit_task"
        android:icon="@drawable/ic_edit_task"
        android:title="@string/edit_task" />
    <item
        android:id="@+id/nav_shared_view_model"
        android:icon="@drawable/ic_shared_view_model"
        android:title="@string/shared_view_model" />
    <item
        android:id="@+id/nav_fragment1"
        android:icon="@drawable/ic_fragment1"
        android:title="@string/fragment1" />
    <item
        android:id="@+id/nav_fragment2"
        android:icon="@drawable/ic_fragment2"
        android:title="@string/fragment2" />
</menu>
