<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/taskEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter task"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task" />



    <Button
        android:id="@+id/navigateToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_home" />

    <Button
        android:id="@+id/navigateToProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_profile" />

    <TextView
        android:id="@+id/taskListTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tasks_will_be_shown_here"
        android:paddingTop="16dp" />
    <EditText
        android:id="@+id/editTaskEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_task"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />
    <Button
        android:id="@+id/editTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_task" />

    <Button
        android:id="@+id/updateTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_task" />
</LinearLayout>
